--- a/tutorial.tex
+++ b/tutorial.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt,a4paper]{article}
 \usepackage[a4paper]{geometry}
 \usepackage[utf8]{inputenc}
-\usepackage[english]{babel}
+\usepackage[dutch]{babel}
 \usepackage{amssymb, amsmath}
 \usepackage{fancyhdr}
 \usepackage{footnote}
@@ -53,10 +53,14 @@
 %\fancyhead[R]{Inleiding programmeren natuurkundigen}
 
 \title{Inleiding programmeren natuurkundigen}
-\author{Ragnar Groot Koerkamp}
+\author{
+Fysicie\\
+i.s.m.\\
+Ragnar Groot Koerkamp
+}
 \date{11 juni 2015}
  
-\renewcommand*\contentsname{Inhoud}
+%\renewcommand{\contentsname}{Inhoud}
 
 \newcommand{\cpp}{\mono{C++}}
  
@@ -66,16 +70,18 @@
 
 \tableofcontents
 \subsection{Overzicht}
-In deze cursus leer je de basis van programmeren in \cpp. We beginnen we bij het opstarten van een project in een tekstverwerker. Daarna gaan we in op de structuur van een programma en wat de regels zijn bij het schrijven ervan. Vervolgens wordt aan de hand van veel voorbeelden en simpele opdrachten de basis van \cpp zelf uitgelegd. We gaan hierbij bijvoorbeeld in op variabelen, \icode{if}-statements en \icode{for}-loops.
+In deze cursus leer je de basis van programmeren in \cpp. We beginnen we bij het opstarten van een project in een tekstverwerker. Daarna gaan we in op de structuur van een programma en wat de regels zijn bij het schrijven ervan. Vervolgens wordt aan de hand van veel voorbeelden en simpele opdrachten de basis van \cpp zelf	 uitgelegd. We gaan hierbij bijvoorbeeld in op variabelen, \icode{if}-statements en \icode{for}-loops.
 
-Na afloop van deze cursus zou je van onderstaande code moeten kunnen achterhalen wat het doet en hoe het werkt:\footnote{of gewoon meteen hier uitleggen?}
+Na afloop van deze cursus zou je van onderstaande code moeten kunnen achterhalen wat het doet en hoe het werkt:
 \code{code/eind.cpp}
-\subsection{Visual studio/ of online?}
-Voor Manon
-Hier ook iets over compileren
+\subsection{Compilers}
+Een computer heeft heel veel rekenkracht en hier kunnen zeker natuurkundigen nuttig gebruik van maken. Met behulp van een computer kunnen we bijvoorbeeld numerieke oplossingen vinden van vergelijkingen die geen analytische oplossing hebben. Maar om de computer iets voor ons te laten uitrekenen, zullen we hem moeten vertellen wat hij precies moet doen. We moeten dus tegen de computer kunnen praten, en dit praten gebeurt in een programmeertaal. Er zijn verschillende programmeertalen zoals C, C++, Java en Python, en een programma schrijven we in zo'n programmeertaal. De computer kan echter deze programmeertalen nog niet direct begrijpen, daarvoor is nog een extra tussenstap nodig. De broncode, geschreven door ons in een programmeertaal, moet worden vertaald naar machinecode. Deze machinecode bevat de opdrachten die de processor moet uitvoeren. Een compiler vertaalt de programmeertaal voor ons naar die machinecode. Voor iedere programmeertaal bestaan er compilers die die programmeertaal naar machinecode vertalen.
+
+Er zijn verschillende C++ compilers. Veel compilers moet je installeren op je computer. Dat gaan we vandaag niet doen, in plaats daarvan gaan we gebruik maken van cloud9, dat is een compiler in een cloud. Deze kun je vinden op \url{http://c9.io}. Verdere uitleg over hoe je precies gebruik maakt van deze compiler vind je bij de eerste opgave.
+
 \subsection{Basis}
-We bekijken nu eerst hoe een programma globaal in elkaar zit. Elk programma heeft een \icode{main} functie waar het altijd begint. Vandaag staat alle code in de main functie, dus tussen de accolades die aangeven welke code bij de \icode{main} hoort.
-Bovenaan het programma zie je groene regels commentaar staan die beginnen met \icode{//}. Deze regels worden altijd overgeslagen bij het uitvoeren. Het commentaar begint pas bij de \icode{//}, dus ervoor kan nog wel code staan. Het is handig om commentaar bij de code te zetten om te verduidelijken wat de code doet. Dat is handig als je ergens later weer naar terug kijkt en dan niet opnieuw hoeft uit te zoeken wat de code nou eigenlijk deed. Commentaar kan ook meer dan een regel omvatting. Dan gebruik je aan het begin \icode{/*} en aan het einde \icode{*/}.
+We bekijken nu eerst hoe een programma globaal in elkaar zit.  \textbf{Elk programma heeft een \icode{main} functie. Bij het uitvoeren van het programma wordt als eerste alles wat in de main functie staat uitgevoerd. Dit gebeurt regel voor regel, van boven naar beneden.} Vandaag staat alle code in de main functie, dus tussen de accolades die aangeven welke code bij de \icode{main} hoort.
+Bovenaan het programma zie je groene regels commentaar staan die beginnen met \icode{//}. Deze regels worden altijd overgeslagen bij het uitvoeren. Het commentaar begint pas bij de \icode{//}, dus ervoor kan nog wel code staan. Het is handig om commentaar bij de code te zetten om te verduidelijken wat de code doet. Dat is handig als je ergens later weer naar terug kijkt en dan niet opnieuw hoeft uit te zoeken wat de code nou eigenlijk deed. Commentaar kan ook meer dan een regel \textbf{omvatten}. Dan gebruik je aan het begin \icode{/*} en aan het einde \icode{*/}. \textbf{Hieronder staat een voorbeeld van een basis voor een programma.} 
 
 \code{code/template.cpp}
 
@@ -84,29 +90,34 @@ Zoals je misschien al is opgevallen eindigt bijna elke regel van het voorbeeld m
 In \cpp  mag je overal zo veel witruimte (spaties, tabs, enters) neerzetten als je maar wilt. De enige eis is dat sommige dingen niet direct aan elkaar geschreven morgen worden, en er dus minstens een spatie tussen moet zitten.
 
 
-Verder zie je ook nog \icode{#include <iostream>} staan. \icode{<iostream>} is een pakketje dat we later nodig zullen hebben om tekst te schrijven naar de console (dat zwarte schermpje, zie verderop) en om data in te lezen. Alle functies in dat pakketje behoren tot de \cpp-standaard-library\footnote{beter kan ik het niet maken. Suggesties?}. Om ze toegankelijk te maken moeten we daarom ook \icode{using namespace std;} bovenaan onze code zetten.
+Verder zie je ook nog \icode{#include <iostream>} staan. \icode{<iostream>} is een pakketje dat we later nodig zullen hebben om tekst te schrijven naar de console en om data in te lezen. (\textbf{De console is een scherm waar je output naar toe kunt schrijven en waar je input uit terug kunt vragen. Bij cloud9 is dat het schermpje dat onder in je beeldscherm staat, zoals je straks vanzelf zult zien.}) Alle functies in dat pakketje behoren tot de \cpp-standaard-library\footnote{beter kan ik het niet maken. Suggesties? \textbf{Sorry, wij kunnen ook niet beter xD}}. \textbf{Om ze makkelijk te gebruiken} moeten we daarom ook \icode{using namespace std;} bovenaan onze code zetten. \footnote{\textbf{We hebben besloten om cloud9 te gaan gebruiken, het is nog makkelijker en toegankelijker dan visual studio. Je hebt dan een ubuntu omgeving met terminal, maar daar gaan we in principe geen gebruik van maken. Er zit ook gewoon een 'run' knop. Maar de output wordt dus wel naar de terminal geprint, en dat is dus niet een zwart schermpje dat verschijnt in dit geval. En het voorbeeld kan worden aangepast, want iets in de grand van getline is dan niet meer nodig.}}
+
+\textbf{Let op het gebruik van hoofdletters en kleine letters in de code. C++ is hoofdlettergevoelig, dus \icode{Int} is niet hezelfde als \icode{int}!}
 
 
-Het programma eindigt met \icode{return 0;}\footnote{of dit gewoon weglaten?}. Het getal dat achter \icode{return} staat, staat voor een mogelijke error die het programma geeft. 0 betekent hier dat er geen errors zijn geweest.
+Het programma eindigt met \icode{return 0;}\footnote{of dit gewoon weglaten?}. Het getal dat achter \icode{return} staat, staat voor een mogelijke error die het programma geeft. 0 betekent hier dat er geen errors zijn geweest. \footnote{\textbf{Gordian en ik hadden een beetje moeite met de return. We vonden de manier waarop het nu uitgelegd staat niet helemaal duidelijk (je kunt deze zinnen heel makkelijk verkeerd opvatten). Maar we wisten ook geen betere manier om het uit te leggen. Aangezien het niet verplicht is om in de main iets te returnen, vinden wij het beter om de return helemaal weg te laten. Het werkt anders alleen maar verwarrend.}}
 \subsubsection{Opdrachten}
 \begin{enumerate}
 	\item
-		Type de code uit het voorbeeld over, maar laat het commentaar nog even weg. Start nu het programma.\footnote{dat doe je door ... te doen, afhankelijk IDE.} Zorg ervoor dat dat zwarte schermpje niet meteen weer uit beeld verdwijnt, maar daar blijft staan en pas weg gaat als je op een toets drukt.
-		Dat doe je met shift-\mono{F5} in Visual Studio, of ... in IDE.
+		\textbf{Type de code uit het voorbeeld over, maar laat het commentaar nog even weg. Om dit te kunnen doen in cloud9 volg je de volgende stappen: }
+		
+		\textbf{Ga naar /textbf{Cloud 9} op https://c9.io/. Maak een account aan. Als je ingelogd bent, klik je op 'create workspace' en vervolgens weer op 'create workspace'. Kies een leuke naam voor je workspace. Selecteer C/C++, de rest kun je laten staan zoals het nu staat. Klik op create en wacht even. Klik links onder 'my projects' op de workspace die je net hebt gecreëerd. Wacht even tot er 'start editing' staat en klik hierop. Ga vervolgens naar 'File' en klik op 'New File'. Sla op met CTRL + S en verander de naam van de file naar 'hallo.cc'. De naam van je programma mag altijd alleen letters en underscores bevatten. De .cc zorgt ervoor dat de compiler weet dat het een C++ programma is. }
+		
+		\textbf{Type nu de code uit het voorbeeld over in dit bestand, maar laat het commentaar nog even weg. Start het programma door op 'Run' bovenaan in de werkbalk te klikken. \footnote{\textbf{Misschien hier iets zeggen van: Als het goed gaat dan geberut er ..... Misschien let ik niet op, maar dat is het voorbeeld waarin niets gebeurt toch? Anders krijgen we straks allemaal vragen 'Waarom gebeurt er niets?' haha :P Of dus iets van: als je geen foutmelding krijgt is je programma goed uitgevoerd.}}	}
 	\item
 		Voeg nu ook commentaar toe op de plekken waar dat in het voorbeeld ook is gedaan. Check dat het programma nog steeds werkt.
 	\item
-		Probeer nu ook op binnen \icode{main} je eigen commentaar toe te voegen van beide soorten.
+		Probeer nu ook \textbf{om} binnen \icode{main} je eigen commentaar toe te voegen van beide soorten, \textbf{dus met // en \icode{/* */}.}
 	\item 
-		Voeg nu een blok code (dus van de soort \icode{/* */}) toe binnen een code regel, dus bijvoorbeeld tussen \icode{int} en \icode{main(){} of tussen \icode{return} en \icode{0;}. Omdat witruimte niet van belang is en het commentaar wordt weggegooid, zou je programma nog steeds moeten werken.
+		\textbf{Voeg nu nogmaals commentaar toe in de vorm van een blok} (dus van de soort \icode{/* */}) toe, \textbf{maar doe dit nu ergens midden in een code regel}, dus bijvoorbeeld tussen \icode{int} en \icode{main(){}. Omdat witruimte niet van belang is en het commentaar wordt weggegooid, zou je programma nog steeds moeten werken.
 \end{enumerate}
 
 \subsection{Console uitvoer}
-Wanneer je het programma start, zie je steeds een zwart scherm verschijnen. Dat heet de \emph{console} of \emph{terminal}. Daar kunnen we tekst neerzetten of juist van lezen. Het neerzetten van tekst kan met het commando \icode{cout}, oftewel, Console-out. Je kan achter de \icode{cout <<} bijvoorbeeld een string of een getal zetten. Ook is er het speciale commando \icode{endl}, dat voor \emph{endline} staat. Hiermee be\"eindig je dus een regel. Het is handig om te onthouden dat je de tekst 'in de console stopt' en de pijltjes dus richting \icode{cout} staan. De algemene syntax is dus:\\
+Bij Cloud 9 staat onderaan je beeldscherm een breed, rechthoekig schermpje. Dat heet de \emph{console} of \emph{terminal}. \footnote{\textbf{Hier alsnog iets zeggen over dat de terminal ook een zwart schermpje kan zijn? Ze gaan zo'n ding snel genoeg tegenkomen denk ik, dus beter weten ze nu al dat het hetzelfde is.}} Daar kunnen we tekst neerzetten of juist van lezen. Het neerzetten van tekst kan met het commando \icode{cout}, oftewel, Console-out. Je kan achter de \icode{cout <<} bijvoorbeeld een string of een getal zetten. Ook is er het speciale commando \icode{endl}, dat voor \emph{endline} staat. Hiermee be\"eindig je dus een regel. Het is handig om te onthouden dat je de tekst 'in de console stopt' en de pijltjes dus richting \icode{cout} staan. \textbf{De syntax van een programmeertaal omvat de spellingsregels/taalregels van de programmeertaal. De syntax beschrijft dus hoe je een bepaalde opdracht die je aan de computer wilt geven op moet schrijven. De algemene syntax van cout is:}\\
 \icode{cout << } \emph{string, cijfer, of nog iets anders} \icode{;}\\
-Het is soms handig om meer dan \'e\'en ding tegelijk te kunnen schrijven. Dat kan met behulp van:
+\textbf{Hierbij staat de tekst `string, cijfer, of nog iets anders' schuingedrukt, omdat je deze niet letterlijk zo in je programma mag zetten. Hier moet je bij het schrijven van je programma nog een specifieke invulling aan geven.} Het is soms handig om meer dan \'e\'en ding tegelijk te kunnen schrijven. Dat kan met behulp van:
 \icode{cout << } \emph{string, cijfer, of nog iets anders} \icode{ << } \emph{andere string, cijfer, etc} \icode{ << } .. \icode{;}\\
-Als je, zoals in het voorbeeld, direct een \icode{endline} gebruikt, heb je een speciale versie van de tweede, langere, variant gebruikt.
+Als je, zoals in het voorbeeld, direct een \icode{endline} gebruikt, heb je een speciale versie van de tweede, langere, variant gebruikt. \footnote{\textbf{Deze zin snap ik niet helemaal. Ik denk dat ik weet wat je ermee bedoelt te zeggen. Ik denk dat het prima is om in het voorbeeld cout << "blabla " << 22 << endl; te doen. Het is goed als ze een voorbeeld van deze variant zien. Of misschien twee voorbeelden, één met de korte en één met de lange variant.}}
 
 \code{code/cout.cpp}
 
@@ -114,23 +125,25 @@ Als je, zoals in het voorbeeld, direct een \icode{endline} gebruikt, heb je een 
 \begin{enumerate}
 		\item
 			Schrijf nu alleen de tekst "How are you?" naar de console in plaats van "Mijn leeftijd is", en zorg dat het getal niet meer wordt geschreven door er commentaar van te maken.\footnote{splitsen naar 2 opdrachtjes?}
+		\item 
+			\textbf{Verplichte opdracht:} Verander alle dubbele pijltjes \icode{<<} nu naar een enkel pijltje \icode{<} en voer het programma uit. Je zult zien dat er geen "How are you" in de console komt te staan. In plaats daarvan krijgen we een foutmelding te zien. Aangezien je nog wel veel vaker een fout zult maken en foutmeldingen tegen zult komen, is het handig om deze te leren lezen. Op de tweede regel van de console taat nu: /home/ubuntu/workspace/hallo.cc: In function ‘int main()’:'. Hier staat dat er in de main functie van het programma hallo.cc een fout is opgetreden. Aangezien ons programma alleen uit een main functie bestaat komen we hier nog niet erg verder mee. Als je naar de tweede regel kijkt staat er waarschijnlijk iets als: /home/ubuntu/workspace/hallo.cc:7:29: error: invalid operands of types ‘bool’ and ‘<unresolved overloaded function type>’ to binary ‘operator<' cout < "Hello World!" < endl;. Hierbij duiden de getallen 7 en 29 na hallo.cc respectievelijk het regelnummer en kolomnummer aan waarop de fout is opgetreden. Let op: dit is het regelnummer waarop de compiler merkt dat er een fout is gemaakt. Dit is niet altijd het regelnummer waar de fout staat, maar meestal wel. Op de rest van deze regel staat een uitleg van wat de fout precies betekent. In dit geval hebben we de operator < gebruikt die voor booleans (bool) bedoelt is of dingen die geen booleans zijn. Als je niet weet wat een bepaalde foutmelding betekent loont het ook altijd om deze even te googlen. \footnote{Misschien kan dit dan beter later, als ze weten wat een boolean is.}
 		\item
 			In plaats van twee dingen op \'e\'en regel weg te schrijven, kunnen we ook twee regels gebruiken. Verander je code naar de twee regels \icode{cout << "How are you?";} en \icode{cout << endl;}. Je ziet dat er nog steeds het zelfde gebeurt als je het programma uitvoert.
 		\item
 			Zorg nu dat het programma twee keer "How are you?" zegt, op twee regels onder elkaar.
 		\item
-			Kan je er ook voor zorgen dat het op \'e\'en regel komt te staan?
+			\textbf{Kan je er ook voor zorgen dat er op \'e\'en regel twee keer "How are you" komt te staan.} 
 		\item
 			Print nu de lijst getallen van 1 tot en met 5, waarbij elk getal op zijn eigen regel staat.
 		\item
-			We kunnen die getallen ook op \'e\'en regel zetten door steeds \icode{endl} te vervangen door \icode{" "}.
+			We kunnen die getallen ook op \'e\'en regel zetten door steeds \icode{endl} te vervangen door \icode{" "}. \textbf{Probeer dit eens uit.}
 		\item
 			Zorg er nu voor dat je in je code maar \'e\'en keer het woord \icode{cout} gebruikt.
-			Zoals je ziet kunnen we het uitvoeren van getallen en tekst door elkaar het gebruiken op dezelfde regel.
+			Zoals je ziet kunnen we in het programma er op \'e\'en regel zowel voor zorgen dat er getallen als tekst naar de console worden geschreven. 
 \end{enumerate}
 
 \subsection{Variabelen}
-Er zijn meerdere soorten variabelen. De belangrijkste zijn getallen en strings. Een getal kan of geheel zijn, of re\"eel. In het eerste geval gebruiken we een \icode{int}, wat staat voor \emph{integer}. Als een getal niet altijd geheel is, hebben we een \icode{double} nodig. Een double kan elke mogelijke waarde aannemen, dus bijvoorbeeld ook $\pi$.\\
+Er zijn meerdere soorten variabelen. De belangrijkste zijn getallen en strings. Een getal kan of geheel zijn, of re\"eel. In het eerste geval gebruiken we een \icode{int}, wat staat voor \emph{integer}. Als een getal niet altijd geheel is, hebben we een \icode{double} nodig. Een double kan elke mogelijke waarde aannemen, dus bijvoorbeeld ook $\pi$. \footnote{\textbf{Kunnen we niet beter een eindig getal nemen?}}\\
 Een \icode{string} is een stuk tekst. In computertaal is dat gewoon een rij van tekens.
 \code{code/vars.cpp}
 \subsubsection{Opdrachten}
@@ -140,18 +153,18 @@ Een \icode{string} is een stuk tekst. In computertaal is dat gewoon een rij van 
 
 
 \subsection{Console invoer}\footnote{Ik heb nu maar uitvoer-variabelen-invoer gedaan, omdat er op die manier geen vooruit-referenties nodig zijn.}
-Het is soms ook handig om juist invoer van de gebruiker te lezen. Daarvoor hebben we \icode{cin}, console-in. Hieronder lezen we een getal in, wat we in de variabele \icode{leeftijd} stoppen. De pijltjes staan hier naar rechts, omdat het getal uit de console komt, en in de variabele wordt gestopt. We kunnen ook naar een string lezen in plaats van naar een getal. De syntax is:\\
+Het is soms ook handig om juist invoer van de gebruiker te lezen. Daarvoor hebben we \icode{cin}, console-in. Hieronder lezen we een getal in, wat we in de variabele \icode{leeftijd} stoppen. De pijltjes staan hier naar rechts, omdat het getal uit de console komt, en in de variabele wordt gestopt. We kunnen ook naar een string lezen in plaats van naar een getal. De syntax is: \\
 \icode{cin >> } \emph{variabele met het type dat je wilt lezen} \icode{;}
 \code{code/cin.cpp}
 \subsubsection{Opdrachten}
 \begin{enumerate}
-	\item Print op een nieuwe regel ook nog de leeftijd die je volgend jaar bent, door \icode{leeftijd + 1} te gebruiken in plaats van \icode{leeftijd}.
+	\item \textbf{Print op een nieuwe regel de leeftijd die je over een jaar hebt}, door \icode{leeftijd + 1} te gebruiken in plaats van \icode{leeftijd}.
 		\item
-			In plaats van een \icode{int}, kunnen we \icode{leeftijd} ook een \icode{double} maken, zodat hij niet geheel meer hoeft te zijn. Doe dat, en kijk wat er gebeurt als je bijvoorbeeld $1$, $2.3$, $1234.345$ en $-11234$ invult. Vergelijk dit ook met het geval waarin het nog een integer was.
+			In plaats van een \icode{int}, kunnen we \icode{leeftijd} ook een \icode{double} maken, zodat hij niet geheel meer hoeft te zijn. Doe dat, en kijk wat er gebeurt als je bijvoorbeeld $1$, $2.3$, $1234.345$ en $-11234$ invult \textbf{in de console}. Vergelijk dit ook met het geval waarin het nog een integer was. \footnote{\textbf{Waar doel je precies op met de vergelijking?}}
 		\item
-			We kunnen er ook nog een string van maken. Als je de code van de eerste opdracht nog hebt, werkt die hier nog steeds. Wat doet de \icode{+} blijkbaar met tekst als argumenten?
+			We kunnen er ook nog een string van maken. Als je de code van de eerste opdracht nog hebt, werkt die hier nog steeds. Wat doet de \icode{+} blijkbaar met tekst als argumenten? \footnote{\textbf{Leuk idee om iets met + te doen voor strings. Het is me echter niet helemaal duidelijk wat de opdracht is die ze moeten uitvoeren?}}
 		\item
-			\footnote{Meer opdrachten nodig? Echt meer kan ik niet bedenken}
+			\footnote{Meer opdrachten nodig? Echt meer kan ik niet bedenken. \textbf{Het is al hartstikke prima!}}
 \end{enumerate}
 
 
@@ -164,7 +177,7 @@ if(conditie){
 	//code wanneer conditie niet waar (false) is;
 }
 \end{lstlisting}
-Hierin is \icode{conditie} een expressie die tot een boolean evalueert, en dus waar of niet waar is. Voorbeelden zijn bijvoorbeeld \icode{if(i == 1)} en \icode{if(i < 10)}, waarbij $i$ een integer is.
+Hierin is \icode{conditie} een expressie die tot een boolean evalueert, en dus waar of niet waar is. Voorbeelden zijn bijvoorbeeld \icode{if(i == 1)} en \icode{if(i < 10)}, waarbij $i$ een integer is. \footnote{Booleans zijn verder nog niet behandeld. Wil je dat hier voor het eerst uitleggen, of bij variabelen al? Er mist namelijk op het moment nog wel een stukje uitleg.}
 
 Soms hoeven we alleen maar iets te doen als de conditie waar is. In dat geval kunnen we ook den syntax
 \begin{lstlisting}
@@ -174,7 +187,7 @@ if(conditie){
 \end{lstlisting}
 gebruiken.
 
-In het volgende voorbeeld hangt de uitvoer van het programma af van de invoer van de gebruiker.
+In het volgende voorbeeld hangt de uitvoer van het programma af van de invoer van de gebruiker. \footnote{\textbf{Heel leuk simpel voorbeeld!}}
 \code{code/if.cpp}
 
 \subsection{Opdrachten}
@@ -182,11 +195,11 @@ In het volgende voorbeeld hangt de uitvoer van het programma af van de invoer va
 		\item
 		Kan je er voor zorgen dat de twee gevallen uit het voorbeeld verwisseld worden? Dus dat de \emph{true} case nu \icode{"Je bent nog een kind!"} print en de \emph{false} case juist \icode{"Je bent volwassen!"}.
 		\item
-			Print nu ook nog de string \icode{"Je mag nu autorijden!"} wanneer de leeftijd precies 18 jaar is. Hierbij heb je dus geen \icode{else} nodig.
+			Print nu ook nog de string \icode{"Je mag nu autorijden!"} wanneer de leeftijd precies 18 jaar is. Hierbij heb je dus geen \icode{else} nodig. \footnote{\textbf{In je vraag staat `emph{ook} nog', maar als ik het goed begrijp wil je dat de dingen van de vorige opdracht niet meer geprint worden?}}
 		\item
 			Bepaal nu of de leeftijd kleiner is dan 18, tussen de 18 en 65 is, of dat hij minstens 65 is. In het laatste geval moet je \icode{"U bent gepensioneerd!"} schrijven naar de console.
 		\item
-			Voor herhaalde \icode{if}-statements is er de syntax
+			Voor herhaalde \icode{if}-statements is er de syntax \footnote{\textbf{Gave toevoeging!}}
 \begin{lstlisting}
 if(conditie 1){
 	// code wanneer conditie 1 waar is;
@@ -202,13 +215,25 @@ Gebruik dit nu voor de code van de vorige opdracht.
 
 \subsection{For}
 Als je een stukje code vaker dan \'e\'en keer wilt uitvoeren, kan je hem natuurlijk een aantal keer onder elkaar kopi\"eren en plakken. Als het aantal keer dat je iets wilt doen niet vast ligt, is dat niet meer handig\footnote{Merk op dat het nooit verstandig is om hier te kopi\"eren en plakken. Als je iets maar twee keer moet doen, kan dat prima met een for loop}. Daarvoor is de \icode{for}-loop.
-Deze herhaalt iets een bepaald aantal keer. Het kan ook zo zijn dat het aantal keer dat iets herhaalt wordt nog niet van tevoren vast ligt. De syntax is
+Deze herhaalt iets een bepaald aantal keer. Het kan ook zo zijn dat het aantal keer dat iets \textbf{herhaald} wordt nog niet van tevoren vast ligt. De syntax is 
 \begin{lstlisting}
 for(initialisatie; conditie; verhoging){
 	//code die herhaald wordt
 }
 \end{lstlisting}
-In de initialisatie wordt de teller variabele meestal gedeclareerd en ge\"initialiseerd\footnote{In \icode{int i = 1;}, is \icode{int i} de declaratie van \icode{i}, en de \icode{i = 1} is de initialisatie.}. Dat is dus bijvoorbeeld \icode{int i = 0;}. De conditie lijkt op de conditie van het \icode{if}-statement. Het is weer een boolean waarde die bepaald of we moeten doorgaan met het herhalen van de code of dat we al moeten stoppen. Vaak is dit iets als \icode{i < 10}. De verhoging bepaald wat we na elke iteratie met de variabele doen. Dat is meestal iets als \icode{i++}, wat equivalent is met \icode{i+=1} en \icode{i=i+1}. Als we dit combineren, zien we dat \icode{i} begint op 0 en net zo lang 1 verhoogd wordt, tot dat hij niet meer kleiner is dan 10. Op dat moment zal \icode{i} dus 10 zijn. In het algemeen is de code van een \icode{for}-loop equivalent aan
+\textbf{De \icode{for}-loop heeft een teller-variabele die voor iedere iteratie (herhaling) van de loop wordt opgehoogd. We zullen stap voor stap bekijken hoe een \icode{for}-loop werkt:}
+
+\begin{enumerate}
+	\item De initialisatie wordt uitgevoerd. Hierbij krijgt de teller zijn beginwaarde, bijvoorbeeld \icode{int i = 0;}. \footnote{\textbf{initialisatie en declaratie zou ik bij variabelen al uitleggen, dan kennen ze dat hier al.}} De initialisatie wordt alleen voor de allereerste iteratie uitgevoerd. 
+	\item Er wordt gecontroleerd of de conditie \emph{true} is (meestal hangt de conditie van de teller af). Dit werkt op dezelfde manier als de conditie bij het \icode{if}-statement, dus de conditie is een boolean waarde die bepaald hoe lang de \icode{for}-loop doorgaat. De conditie is vaak iets als \icode{i < 10}. Als de conditie \emph{true} is, gaat het programma verder met de stappen hieronder. Als de conditie \emph{false} is wordt de for-loop afgebroken. 
+	\item De code die tussen de accolades staat wordt uitgevoerd. Dit kan van alles zijn. 
+	\item De teller wordt opgehoogd. Vaak wordt de teller met \'e\'en opgehoogd, door middel van \icode{i++}, wat equivalent is met \icode{i+=1} en \icode{i=i+1}. Je kunt de teller bijvoorbeeld ook met 2 verlagen, wat je kunt doen met \icode{i-=2} of \icode{i=i-2}. \footnote{\textbf{Belangrijk om deze drie ook al te behandelen bij variabelen denk ik.}}
+	\item Stap 2 t/m 4 worden herhaald net zo lang totdat bij een bepaalde iteratie de conditie bij 2 niet meer \emph{true} is. De for-loop is dan ten einde. 
+\end{enumerate}
+
+Als je de kleine voorbeelden die hierboven stonden combineert dan zie je dat: \icode{i} begint op 0 en wordt net zo lang met 1 verhoogd totdat hij niet langer kleiner is dan 10. Voor al deze iteraties wordt de code tussen de accolades uitgevoerd, in dit geval gebeurt dat dus 10 keer. 
+
+\textbf{Hieronder staat de zelfde uitleg nog een keer, maar dan in code in plaats van in woorden.} In het algemeen is de code van een \icode{for}-loop equivalent aan
 \begin{lstlisting}
 initialisatie;
 if(conditie){
@@ -230,7 +255,7 @@ if(conditie){
 Hier is een voorbeeld van het gebruik van \icode{for}.
 \code{code/for.cpp}
 Als je dit intikt en uitvoert, zie je dat er eerst drie keer 'hoera' wordt geschreven, en daarna de getallen van $0$ tot en met $10$. De werking van een \icode{for}-loop is als volgt:\\
-In de \icode{initialisatie} wordt meestal een variabele ge\"initialiseerd, zoals hier \icode{int i=0}. In de \icode{conditie} kijken we steeds of we moeten doorgaan met de volgende iteratie, of dat we moeten stoppen met herhalen. Zolang de conditie waar is gaan we door, en als hij niet meer waar is stoppen we met herhalen. Hier gaan we dus alleen maar door wanneer \icode{i} kleiner is dan $3$. In de \icode{verhoging} verhogen we de variabele waarover we lopen. Meestal verhogen we hem steeds met $1$ tegelijk maar dat hoeft niet per se.
+
 
 \subsubsection{Opdrachten}
 \begin{enumerate}
@@ -254,5 +279,19 @@ while(conditie){
 \end{lstlisting}
 In de code hieronder zie je een voorbeeld. We beginnen hier met $n=0$, en vervolgens schrijven we steeds $n^2$ op, net zo lang tot $n^2$ groter wordt dan $1000$.
 \code{code/while.cpp}
+
+\subsection{Tips: Hoe nu verder?}
+In twee uur kunnen we je helaas niet alles leren wat er te leren valt over C++, dus hier komen een aantal tips die je kunt gebruiken als je zelfstandig verder wilt gaan met leren programmeren in C++. 
+\begin{itemize}
+	\item Raak niet in paniek als je foutmeldingen krijgt, ook niet als het er heel veel zijn. Het is heel normaal om fouten te maken (bijvoorbeeld typefouten) en dit is hoe de compiler je waarschuwt voor deze fouten Kijk in welk regelnummer de fout zich heeft voorgedaan (zie opdracht) en google de specifieke foutmelding als je niet weet wat deze betekent. Soms kan \'e\'en kleine typefout al een hele reeks foutmeldingen genereren, maar laat je daardoor niet afschrikken! 
+	\item Soms kan het gebeuren dat je een foutmelding toch niet kan vinden, ondanks het regelnummer dat staat aangegeven bij de foutmelding. Het kan handig zijn om dan specifieke delen van je programma waarvan je vermoedt dat ze de fout veroorzaken even uit te zetten met behulp van commentaar (dus \icode{//} of \icode{/* */}). Als het programma het dan wel doet, dan weet je dat de fout zich bevindt in de regels die nu in het commentaar staan! 
+	\item Er is ontzettend veel te vinden over C++ (en ook andere programmeertalen) op internet. Eigenlijk is er maar \'en\'en goede tactiek als je nog meer wilt leren: google je suf! 
+	\item Handige links zijn onder andere: stackexchange.com \footnote{\textbf{Jij hier misschien nog ideeën voor? of dit weglaten?}}
+	\item Als je een compiler wilt installeren op een Windows computer dan zijn handige alternatieven: Code::Blocks en Visual Studio Express 2013 for Windows Desktop. 
+	\item Als je twijfelt of je berekeningen goed gaan kan het handig zijn om als tussenstappen de waarde van een variabele te printen 
+	\item Als het je leuk lijkt om een programmeervak te gaan volgen, kun je eens naar deze vakken gaan kijken: bij natuurkunde `Numerieke Methoden' (C en Mathematica), bij wiskunde `Programmeren in de wiskunde' (Python) en bij informatica `Imperatief programmeren' (C\#, eerstejaarsvak, dus goed te doen voor natuurkundigen ook!). Geen van deze vakken wordt in C++ gegeven, maar ze worden wel in soortgelijke talen gegeven. Als je eenmaal in een taal kunt programmeren is het heel makkelijk om over te stappen naar een andere taal, dus ook deze vakken kunnen je uiteindelijk zeker helpen om beter te worden in C++. 
+	\item We hebben express te veel opdrachten gemaakt voor vandaag, dus niet getreurd, je kunt thuis gewoon verder gaan met oefenen! Daarnaast zijn er op het internet ook heel veel beginnersopdrachten in C++ te vinden, zoals op: \url{http://www.worldbestlearningcenter.com/index_files/cpp-tutorial-variables_datatypes_exercises.htm}.
+\end{itemize}
+
 \end{document}
 
